--- a/templates/Forgotpass.html
+++ b/templates/Forgotpass.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Forgot Password</title>
-    <link rel="stylesheet" href=' {% static "ForgotPass.css" %}'/>
+    <link rel="stylesheet" href=' {% static "Forgotpass.css" %}'/>
     
     <script>
         
